# batchpress

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup_git.sh
.github/workflows/: ci.yml
core/include/batchpress/: export.hpp  processor.hpp  scanner.hpp  thread_pool.hpp  types.hpp  video_processor.hpp
core/src/: processor.cpp  scanner.cpp  sha256.hpp  types.cpp  video_processor.cpp
scripts/: setup_android_ndk.sh  setup_git_history.sh
tests/: generate_test_images.py  generate_test_videos.sh  run_tests.sh  test_batchpress.cpp
tests/testdata/videos/mov/: video_720p_mov_speech.mov
tests/testdata/videos/mp4/: video_720p_vp9.webm
ui/android/: BUILD.md
ui/android/java/com/batchpress/: BatchPress.java
ui/android/jni/: jni_bridge.cpp
ui/cli/: cli.cpp  cli.hpp  main.cpp  progress.cpp  progress.hpp  scan_report.cpp  scan_report.hpp  select.cpp  select.hpp  video_scan_report.cpp  video_scan_report.hpp
ui/qt/: README.md
